test/reject/test03.imgine
// Use of integers instead of floats

image im = image("path");

im.apply(
    filter()
        .parameter(exposure=6)
        .parameter(luminosity=0)
        .parameter(shadows=1)
        .parameter(contrast=6)
        .parameter(brightness=5)
        .parameter(saturation=0.6)
        .parameter(opacity=0.6)
);

im.save("formato formatoso");